<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainDrawerTest">

    <RelativeLayout
        android:id="@+id/relative_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include layout="@layout/toolbar" />
    </RelativeLayout>

    <!--<android.support.v4.widget.DrawerLayout
        android:layout_width="match_parent"
        android:id="@+id/drawerLayout"
        android:layout_height="match_parent">-->
    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_toolbar">

        <include
            android:id="@+id/imageFilpper"
            layout="@layout/img_flipper_welcome_page" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/relative_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/lin_wel_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <ImageView
                android:id="@+id/img_logo"
                style="@style/PageTitle"
                android:padding="@dimen/dimen_image_pad"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />


        </LinearLayout>

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/hor_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fillViewport="true"
        android:measureAllChildren="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="50dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_test"
                    style="@style/welcome_button"
                    android:layout_margin="@dimen/dimen_image_pad"
                    android:visibility="gone"
                    android:text="@string/str_btn_test" />
                <Button
                    android:id="@+id/btn_login_req"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/welcome_button"
                    android:layout_margin="@dimen/dimen_image_pad"
                    android:drawableTop="@drawable/ic_login_round"
                    android:text="@string/str_btn_login" />

                <Button
                    android:id="@+id/btn_calculator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_loan_calculator"
                    style="@style/welcome_button"
                    android:visibility="visible"
                    android:text="@string/str_btn_loan_calculator" />
                <Button
                    android:id="@+id/btn_wel_exchange_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_exchange_rate"
                    style="@style/welcome_button"
                    android:layout_margin="@dimen/dimen_image_pad"
                    android:text="@string/str_btn_exchange_rate"/>

                <Button
                    android:id="@+id/btn_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_branch_location_pin"
                    style="@style/welcome_button"
                    android:layout_margin="@dimen/dimen_image_pad"
                    android:text="@string/str_btn_branchs" />
                <Button
                    android:id="@+id/btn_atm_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_atm_location_pin"
                    style="@style/welcome_button"
                    android:layout_margin="@dimen/dimen_image_pad"
                    android:text="@string/str_btn_atm_location" />
                <Button
                    android:id="@+id/btn_wel_contact_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_contact_center"
                    style="@style/welcome_button"
                    android:layout_margin="@dimen/dimen_image_pad"
                    android:text="@string/str_btn_contact_center"/>

            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
    <!--
            &lt;!&ndash; navigation drawer &ndash;&gt;
            <RelativeLayout
                android:layout_gravity="left|start"
                android:layout_width="match_parent"
                android:background="#fff"
                android:layout_height="match_parent">
                <FrameLayout
                    android:id="@+id/content_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <ListView
                    android:id="@+id/left_drawer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="#eee"
                    android:choiceMode="singleChoice"
                    android:background="#fff"
                    android:dividerHeight="1dp" />
            </RelativeLayout>

        </android.support.v4.widget.DrawerLayout>-->

</RelativeLayout>