<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.obl.oblmobileapp.activity.LoanCalActivity">

    <RelativeLayout
        android:id="@+id/rel_loan_cal_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_loan_cal_header">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                style="@style/PageFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/LoanPrincipal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/loan_amount"
                        android:imeActionLabel="@string/action_label_loan_amount"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number|numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/LoanInterest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/interest_rate"
                        android:imeActionLabel="@string/interest_rate"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number|numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/LoanMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_total_month"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/lbl_total_month"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_lay_from_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_loan_from_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_from_date"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/lbl_from_date"
                        android:imeOptions="actionUnspecified"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:visibility="visible" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_loan_to_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/lbl_to_date"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/lbl_to_date"
                        android:imeOptions="actionUnspecified"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:visibility="visible" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnCalculate"
                    style="@style/post_button"
                    android:layout_centerVertical="true"
                    android:text="Calculate" />

                <Button
                    android:id="@+id/btn_loan_cal_reset"
                    style="@style/post_button"
                    android:text="@string/reset" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout"
                    android:layout_margin="10dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:visibility="visible">


                    <RelativeLayout
                        android:id="@+id/rLayout_header"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/detail_header_border_shadow"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/imgProfIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:padding="@dimen/dimen_image_pad"
                            android:src="@drawable/ic_loan_emi_128" />

                        <com.app.obl.oblmobileapp.font.RobotoTextView
                            android:id="@+id/txtLoanResult"
                            style="@style/list_item_label"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="0"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="30dp"
                            app:typeface="robotoBold" />

                        <com.app.obl.oblmobileapp.font.RobotoTextView
                            style="@style/list_item_text"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="approximately"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="10dp"
                            app:typeface="robotoLightItalic" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>
